// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`font weights bold is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--bold toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`font weights normal is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`hasArrow is rendered 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`positions center is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--groupCenter toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`positions left is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--groupLeft toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`positions none is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`positions right is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--groupRight toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`sizes m is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--normal toolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;

exports[`sizes s is applied 1`] = `
<EuiButton
  className="toolbarButton toolbarButton--normal toolbarButton--s"
  color="text"
  contentProps={
    Object {
      "className": "toolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="s"
  textProps={
    Object {
      "className": "toolbarButton__text",
    }
  }
/>
`;
